app/theme.scss
/*!
 * Copyright © 2023 United States Government as represented by the
 * Administrator of the National Aeronautics and Space Administration.
 * All Rights Reserved.
 *
 * SPDX-License-Identifier: Apache-2.0
 */

@use 'styles' with (
  $background-color-settings: (
    active: true,
    hover: true,
  ),
  $theme-utility-breakpoints: (
    mobile-lg: true,
    tablet: true,
    tablet-lg: true,
    desktop: true,
  ),
  $theme-show-notifications: false,
  $theme-image-path: 'nasawds/src/img',
  $theme-font-path: 'nasawds/src/fonts'
);

@use 'uswds-core' as *;

/*
 * USWDS prose fix ups:
 * - Unset max-width for paragraphs and list items in a grid container because
 *   the intended maximum width is already provided by the grid container
 *   itself.
 * - No top margin for h1 if it is the first element in the containing element.
 */
.grid-container .usa-paragraph,
.grid-container .usa-list > li {
  max-width: none;
}

h1:first-child {
  margin-top: 0;
}

/*
 * Without this, the mobile nav menu button seems to extend one pixel below
 * the header.
 */

.usa-header--dark .usa-navbar {
  border-bottom-width: 0;
}

/*
 * Pin the footer to the bottom of the screen.
 * See https://css-tricks.com/a-clever-sticky-footer-technique/
 */

.usa-identifier {
  position: static; /* instead of absolute */
  top: 100vh;
}

html,
body {
  height: 100%;
}

/*
 * Set heading font to Helvetica
 */

@for $i from 1 through 6 {
  h#{$i} > a {
    font-family: family('lang');
  }
}

.usa-footer__logo-heading {
  font-family: family('lang');
}

/*
 * Hover link indicator for headings (like in GitHub's display of Markdown)
 */

h1,
h2,
h3,
h4,
h5,
h6 {
  & > a {
    color: inherit;
    text-decoration: none;
  }

  & > a:hover::after {
    content: url('nasawds/src/img/usa-icons/link.svg');
    position: absolute;
    padding-left: 1ex;
  }
}

/*
 * Background color for code samples
 */

code,
code.hljs {
  @extend .bg-base-lightest;
}

/*
 * Styling for external links
 */

a[rel~='external'] {
  @extend .usa-link--external;
}

/*
 * Active nav links
 */

.active {
  @extend .usa-current;
}

/*
 * Disabled link visited color in contact links
 */

.contact-link a:visited {
  @include u-text($theme-link-color);
}

/*
 * Styles for notice cards
 */

.notice-card:hover .usa-card__container {
  @include u-border('ink');
}

.notice-card {
  text-decoration: none;
}

/*
 * Accented cards
 */

.card-accent-cool {
  & .usa-card__container {
    @include u-border('accent-cool');
    @include u-bg('accent-cool');
  }

  & .usa-card__body {
    @include u-bg('white');
  }
}

/*
 * react-tag-autocomplete styles, adapted from
 * https://github.com/i-like-robots/react-tags/blob/main/example/styles.css
 */

.react-tags {
  position: relative;
  padding: 6px 0 0 6px;
  border: 1px solid #d1d1d1;
  border-radius: 1px;

  /* shared font styles */
  font-size: 1em;
  line-height: 1.2;

  /* clicking anywhere will focus the input */
  cursor: text;
}

.react-tags.is-active {
  @include focus-outline;
}

.react-tags__label {
  position: absolute;
  left: -10000px;
  top: auto;
  width: 1px;
  height: 1px;
  overflow: hidden;
}

.react-tags__list {
  display: inline;
  padding: 0;
}

.react-tags__list-item {
  display: inline;
  margin: 0 6px 6px 0;
}

.react-tags__combobox {
  display: inline-block;

  /* match tag layout */
  padding: 7px 2px;
  margin-bottom: 6px;

  /* prevent autoresize overflowing the container */
  max-width: 100%;
}

.react-tags__combobox-input,
input.react-tags__combobox-input:focus {
  /* prevent autoresize overflowing the container */
  max-width: 100%;

  /* remove styles and layout from this element */
  margin: 0;
  padding: 0;
  border: 0;
  outline: none;

  /* match the font styles */
  font-size: inherit;
  line-height: inherit;
}

@media screen and (min-width: 30em) {
  .react-tags__listbox {
    width: 240px;
  }
}

.react-tags__listbox {
  position: absolute;
  z-index: 1;
  top: calc(100% + 5px);
  left: -2px;
  right: -2px;
  padding: 0;
  list-style: none;
  background: white;
  border: 1px solid #d1d1d1;
  border-radius: 2px;
  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
}

.react-tags__listbox-option {
  border-bottom: 1px solid #ddd;
  padding: 6px 8px;
}

.react-tags__listbox-option:hover {
  cursor: pointer;
  background: #eee;
}

.react-tags__listbox-option.is-active {
  background: #b7cfe0;
}

.react-tags__listbox-option.is-disabled {
  opacity: 0.5;
  cursor: auto;
}

/*
 * Client credential cards
 */

.segmented-card-headline h3,
.segmented-card-headline p,
.segmented-card-headline small {
  display: inline;
  vertical-align: bottom;
}

.segmented-card-headline h3 {
  font-weight: bold;
}

/*
 * Hero formatting
 */

.gcn-hero-background {
  background-image: none;

  @include at-media('tablet-lg') {
    background-image:
      url('~/routes/_index/hero/center.jpg'),
      url('~/routes/_index/hero/left.jpg');
    background-repeat: no-repeat, repeat-x;
    background-size: auto 100%;
    background-position-x: right;
    background-position-y: top;
    background-origin: padding-box;
    padding-left: calc(0.5 * (100vw - units($theme-grid-container-max-width)));
    box-sizing: content-box;
    max-width: units($theme-grid-container-max-width);
  }
}

.usa-hero__callout {
  @include at-media('tablet-lg') {
    padding-top: 2rem;
    padding-bottom: 2rem;
  }
}

.gcn-hero-background-right {
  @include at-media('tablet-lg') {
    background-image: url('~/routes/_index/hero/right.jpg');
    background-repeat: repeat-x;
    background-size: auto 100%;
    background-position-x: left;
    background-position-y: top;
  }
}

.gcn-hero-image {
  @include at-media('tablet-lg') {
    display: none;
  }
}

/*
 * General Responsiveness in missions page
 */

.overflow-table {
  overflow-x: scroll;
}

/*
 * Bottom aligned header rows
 */
.bottom-aligned {
  display: inline;
  vertical-align: bottom;
}

/*
 * Fully span the row width for segmented columns
 */
.full-width-span {
  flex: 1 1 100%;
}

.notice-types-overflow {
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

/*
 * Suppress vertical margins for nested button groups inside button groups
 */

.usa-button-group__item .usa-button-group__item {
  margin-top: 0;
  margin-bottom: 0;
}

/*
 * Workaround for https://github.com/uswds/uswds/issues/5558
 */

.usa-input-prefix.wide-input-prefix + * {
  padding-left: units(10);
}

/*
 * Dark mode (for ACROSS pages)
 */

.usa-prose--dark {
  @include u-bg('ink');
  @include u-text('white');
}

/*
 * Workaround for https://github.com/uswds/uswds/issues/5695
 */
figure {
  & > figcaption {
    @include u-text('gray-30');
    margin-left: 2rem;
    font-style: italic;
  }
  & > figcaption > img {
    padding-bottom: 1rem;
    padding-right: 0.5rem;
    float: left;
  }
}
figure.bordered {
  @include u-border-left(2px, 'base');
}

